Add delete feature to the app and delete data from the database

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -92,7 +92,7 @@
         <button type="button" class="btn btn-warning preference-type-btn">
           <%= i.preference %>
         </button>
-        <a href="/delete-task">
+        <a href="/delete-task?id=<%= i._id %>">
           <button
             type="button"
             class="btn btn-secondary btn-lg btn-danger btn-style"
